--- a/index.html
+++ b/index.html
@@ -23,59 +23,62 @@
     </header>
   
 <main class="about" id="main">
+
+  <h2 class="header">True2TheBlue Blog</h2>
+
   <div class="row">
     <div class="leftcolumn">
       <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h3>Title description, Dec 7, 2017</h3>
+        <h3>KYLE LEWIS HEADED TO ARIZONA</h3>
+        <h4>Nov 29, 2022</h4>
         <div class="realimg">
-        <img src="images/ted_burton_homerun_trot.webp" alt="Ted Burton Home Run Trot">
+        <img src="images/lewis.webp" alt="Kyle Lewis action shot">
         </div>
-        <p>Some text..</p>
+        <p>Mariners receive minor leaguer in offseason swap.</p>
       </div>
       <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h3>Title description, Sep 2, 2017</h3>
+        <h3>WAS THERE A POTENTIAL MARINERS-PHILLIES-YANKEES 3-WAY TRADE?</h3>
+        <h4>Nov 29, 2022</h4>
         <div class="realimg">
-          <img src="images\bakich_smiling.webp" alt="Coach Bakich Smiling">
+          <img src="images\gallo.webp" alt="Joey Gallo action shot">
           </div>
-        <p>Some text..</p>
+        <p>Mariners reportedly had a deal in place to receive Joey Gallo in exchange for starting pitcher Marco Gonzalez.</p>
       </div>
       <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h3>Title description, Sep 1, 2017</h3>
+        <h3>THE FUTURE OF MITCH HANIGER</h3>
+        <h4>Nov 29, 2022</h4>
         <div class="realimg">
-          <img src="images\bogaerts_devers_friendly.jpeg" alt="Bogaerts and Devers embracing">
+          <img src="images\haniger.jpg" alt="Mitch Haniger action shot">
           </div>
-        <p>Some text..</p>
+        <p>What are the Mariners options with Mitch Haniger?</p>
       </div>
       <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h3>Title description, Aug 2, 2017</h3>
+        <h3>JULIO RODRIGUEZ SECURES AL ROY.</h3>
+        <h4>Nov 29, 2022</h4>
         <div class="realimg">
-          <img src="images\julio_rodriguez_stolen_base.jpg" alt="Julio Rodriguez stealing 2nd base">
+          <img src="images\julio.jpg" alt="Julio Rodriguez smiling ear to ear">
           </div>
-        <p>Some text..</p>
+        <p>Julio Rodriguez caps off his remarkable season by receiving the American League Rookie of the Year award.</p>
       </div>
       <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h3>Title description, Jul 2, 2017</h3>
+        <h3>MARINERS TO REPLACE SWANSON WITH KODAI SENGA?</h3>
+        <h4>Nov 29, 2022</h4>
         <div class="realimg">
-          <img src="images\marco_gonzalez.jpg" alt="marco Gonzalez pitching the baseball">
+          <img src="images\senga.jpg" alt="Kodai Senga action shot">
           </div>
-        <p>Some text..</p>
+        <p>Rumors are beginning to swirl that the Mariners plan to replace Erik Swanson (dealt to Toronto for Teoscar Hernandez) with Japanese sensation Kodai Senga.</p>
       </div>
     </div>
     <div class="rightcolumn">
       <div class="card">
-        <h2>Most Recent Post</h2>
+        <h3>Most Recent Post</h3>
         <div class="realimg">
           <img src="images\matty_beniers_michigan_kraken.jpg" alt="Matty Beniers Michigan/Seattle Kraken Mashup">
           </div>
         <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
       </div>
       <div class="card">
-        <h2>Popular Post</h2>
+        <h3>Popular Post</h3>
         <div class="realimg">
           <img src="images\mitch_haniger_dugout.jpg" alt="Mitch Haniger high-fiving teammates">
           </div><br>
@@ -87,7 +90,7 @@
             </div>
       </div>
       <div class="card">
-        <h2>Follow Me</h2>
+        <h3>Follow Me</h3>
         <p>Some text..</p>
       </div>
     </div>
