--- a/index.html
+++ b/index.html
@@ -71,27 +71,26 @@
     </div>
     <div class="rightcolumn">
       <div class="card">
-        <h3>Most Recent Post</h3>
+        <h3>Featured Post</h3>
         <div class="realimg">
-          <img src="images\matty_beniers_michigan_kraken.jpg" alt="Matty Beniers Michigan/Seattle Kraken Mashup">
+          <img src="images\crawford.jpeg" alt="JP Crawford swagger shot">
           </div>
-        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        <p>Analyzing what the Mariners should do regarding JP Crawford and the abundant shortstop market.</p>
       </div>
       <div class="card">
-        <h3>Popular Post</h3>
+        <h3>Non-Mariner Blog Posts</h3>
         <div class="realimg">
-          <img src="images\mitch_haniger_dugout.jpg" alt="Mitch Haniger high-fiving teammates">
-          </div><br>
+          <img src="images\michigan-flag-plant.webp" alt="Michigan planting their flag">
+          </div>
+          <p>Michigan Wolverines obliterate sorry Buckeyes. Plant flag in Columbus.</p><br>
         <div class="realimg">
           <img src="images\msu_stinks.jpg" alt="Michigan football team hoists the Paul Bunyan Trophy">
-          </div><br>
+          </div>
+          <p>Wolverines remind the Spartans that they are still little brother.</p><br>
           <div class="realimg">
             <img src="images\nashville_baseball_stadium_mock_up.webp" alt="Potential Nashville MLB stadium rendering">
             </div>
-      </div>
-      <div class="card">
-        <h3>Follow Me</h3>
-        <p>Some text..</p>
+            <p>Why Nashville is the ideal expansion city for Major League Baseball.</p>
       </div>
     </div>
   </div>
