--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/morgan.css">
+    
     <title>True 2 The Blue</title>
   </head>
 
@@ -42,5 +44,10 @@
 
 
     </main>
+
+    <footer>
+        <p><br/>Webpage created by Ryley Larson and Morgan Huseby. Go M's!</p>
+    </footer>
+
     </body>
 </html>
