--- a/roster.html
+++ b/roster.html
@@ -11,14 +11,15 @@
   <body>
     <a class = "skip" href="#main">Skip to Main Content</a>
     <header>
-        <h1 id="title">True2TheBlue</h1>
-      <nav>
-        <ul class="nav_links">
-          <li class="nav_item"><a href="index.html">True2TheBlue Blog</a></li>
-          <li class="nav_item"><a href="about.html">About Us</a></li>
-          <li class="nav_item"><a href="roster.html">All-Time Roster</a></li>
-          <li class="nav_item"><a href="moments.html">All-Time Moments</a></li>
-        </ul>
+        <img src="images/MarinersLogo.png" alt="Mariners logo" id = "logo">
+        <nav>
+            <h1 id="title">True 2 The Blue</h1>
+            <ul class="nav_links">
+                <li class="nav_item"><a href="about.html">About Us</a></li>
+                <li class="nav_item"><a href="index.html">True2TheBlue Blog</a></li>
+                <li class="nav_item"><a href="roster.html">All-Time Roster</a></li>
+                <li class="nav_item"><a href="moments.html">All-Time Moments</a></li>
+            </ul>
     </nav>
     </header>
   
