--- a/moments.html
+++ b/moments.html
@@ -83,5 +83,9 @@
 
 
     </main>
+  
+    <footer>
+  <p><br/>Webpage created by Ryley Larson and Morgan Huseby. Go M's!</p>
+</footer>
     </body>
 </html>
