--- a/about.html
+++ b/about.html
@@ -11,11 +11,11 @@
   <body>
     <a class = "skip" href="#skip">Skip to Main Content</a>
     <header>
-        <img src="images/MarinersLogo.png" alt="" id = "logo">
+        <img src="images/MarinersLogo.png" alt="Mariners Logo" id = "logo">
         <nav>
             <h1 id="title">True 2 The Blue</h1>
             <ul class="nav_links">
-                <li class="nav_item"><a href="about.html">About Us</a></li>
+                <li class="active"><a href="about.html">About Us</a></li>
                 <li class="nav_item"><a href="index.html">True2TheBlue Blog</a></li>
                 <li class="nav_item"><a href="roster.html">All-Time Roster</a></li>
                 <li class="nav_item"><a href="moments.html">All-Time Moments</a></li>
