--- a/moments.html
+++ b/moments.html
@@ -16,7 +16,7 @@
                 <li class="nav_item"><a href="about.html">About Us</a></li>
                 <li class="nav_item"><a href="blog.html">True2TheBlue Blog</a></li>
                 <li class="nav_item"><a href="roster.html">All-Time Roster</a></li>
-                <li class="nav_item"><a href="moments.html">All-Time Moments</a></li>
+                <li class="active"><a href="moments.html">All-Time Moments</a></li>
             </ul>
         </nav>
     </header>
