--- a/roster.html
+++ b/roster.html
@@ -17,7 +17,7 @@
             <ul class="nav_links">
                 <li class="nav_item"><a href="about.html">About Us</a></li>
                 <li class="nav_item"><a href="index.html">True2TheBlue Blog</a></li>
-                <li class="nav_item"><a href="roster.html">All-Time Roster</a></li>
+                <li class="active"><a href="roster.html">All-Time Roster</a></li>
                 <li class="nav_item"><a href="moments.html">All-Time Moments</a></li>
             </ul>
     </nav>
