--- a/moments.html
+++ b/moments.html
@@ -1,7 +1,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/morgan.css">
     <title>True 2 The Blue</title>
   </head>
@@ -14,7 +16,7 @@
             <h1 id="title">True 2 The Blue</h1>
             <ul class="nav_links">
                 <li class="nav_item"><a href="about.html">About Us</a></li>
-                <li class="nav_item"><a href="blog.html">True2TheBlue Blog</a></li>
+                <li class="nav_item"><a href="index.html">True2TheBlue Blog</a></li>
                 <li class="nav_item"><a href="roster.html">All-Time Roster</a></li>
                 <li class="active"><a href="moments.html">All-Time Moments</a></li>
             </ul>
